<resources>
    <string name="app_name">Math App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="setup_question">What type of questions do you want?</string>
    <string name="mixed">Mixed</string>
    <string name="btn_continue_text">Continue</string>
    <string name="tv_question_amount">How many questions do you want?</string>
    <string name="unanswered">UNANSWERED</string>
    <string name="welcome_to_the_math_app_let_s_do_some_math_practice">Welcome to the Math App! Let\'s do some math practice!</string>
</resources>