<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_chainStyle="packed"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_setup"
        style="@style/TextGeneralStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/setup_question"

        app:layout_constraintBottom_toTopOf="@+id/btn_addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addition"
        style="@style/BtnStyleSetupType"
        android:text="@string/addition"
        app:layout_constraintBottom_toTopOf="@+id/btn_subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_subtraction"
        style="@style/BtnStyleSetupType"
        android:text="@string/subtraction"
        app:layout_constraintBottom_toTopOf="@+id/btn_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addition" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multiplication"
        style="@style/BtnStyleSetupType"
        android:text="@string/multiplication"
        app:layout_constraintBottom_toTopOf="@+id/btn_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_subtraction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_division"
        style="@style/BtnStyleSetupType"
        android:text="@string/division"
        app:layout_constraintBottom_toTopOf="@+id/btn_mixed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiplication" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mixed"
        style="@style/BtnStyleSetupType"
        android:text="@string/mixed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_division" />
</androidx.constraintlayout.widget.ConstraintLayout>